--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
 Imports:
+  stringr (>= 1.0.0),
+  audio
 Suggests:
 VignetteBuilder: knitr
