Updated description for better representation.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Date: 2018-02-26
 Authors@R: person("Mike", "DeCarlo", email = "decarlo.michael.j@gmail.com", role = c("aut", "cre"))
 Description: The {geekr} package is simply an expansion on the {beepr} package
   by rasmusab@github.com. The expansion intends to include multiple beep() like
-  function named after a different classic video game from which the sounds
-  originate.
+  functions named after a different classic video games from which the sounds
+  originate or other popular culture sources.
 Depends: R (>= 3.4.3)
 License: file LICENSE
 Imports: 
