--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ Depends: R (>= 3.4.3)
 Imports:
   audio,
   stringr
+Suggests: 
+    testthat
 Description: The {geekr} package is simply an expansion on the {beepr} package
   by rasmusab@github.com. The expansion intends to include multiple beep() like
   functions named after a different classic video games from which the sounds
@@ -18,4 +20,4 @@ URL: https://github.com/mike-decarlo/geekr
 BugReports: https://github.com/mike-decarlo/geekr
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 6.1.0.9000
